Clean some code

--- a/naunet/templates/cvode/include/naunet_ode.h.j2
+++ b/naunet/templates/cvode/include/naunet_ode.h.j2
@@ -22,11 +22,11 @@
 {% if info.device == "gpu" -%}
 __device__ __host__
 {% endif -%}
-int calculate_rates(realtype *rates, realtype *y, UserData *user_data);
+int calculate_rates(realtype *k, realtype *y, UserData *user_data);
 int fex(realtype t, N_Vector u, N_Vector u_dot, void *user_data);
 int jtv(N_Vector v, N_Vector Jv, realtype t, N_Vector u, N_Vector fu, 
         void *user_data, N_Vector tmp);
-int jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix Jac, 
+int jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix jmatrix, 
         void *user_data, N_Vector tmp1, N_Vector tmp2, N_Vector tmp3);
 
 {% if info.method == "cusparse" -%}
