--- a/naunet/templates/cvode/include/naunet.h.j2
+++ b/naunet/templates/cvode/include/naunet.h.j2
@@ -3,8 +3,6 @@
 
 {% if header %}
 #include <cvode/cvode.h>                // prototypes for CVODE fcts., consts.
-#include <sunlinsol/sunlinsol_spgmr.h>  // access to SPGMR SUNLinearSolver
-#include <cvode/cvode_spils.h>          // access to CVSpils interface
 {% if info.method == "dense" -%}
 #include <nvector/nvector_serial.h>     // access to serial N_Vector
 #include <sunmatrix/sunmatrix_dense.h>  // access to dense SUNMatrix
@@ -17,6 +15,9 @@
 {% elif info.method == "cusparse" -%}
 #include <nvector/nvector_cuda.h>
 #include <sunlinsol/sunlinsol_cusolversp_batchqr.h>
+{% elif info.method == "spgmr" -%}
+#include <sunlinsol/sunlinsol_spgmr.h>  // access to SPGMR SUNLinearSolver
+#include <cvode/cvode_spils.h>          // access to CVSpils interface
 {% endif -%}
 #include <sundials/sundials_types.h>    // defs. of realtype, sunindextype
 #include <sundials/sundials_math.h>     // contains the macros ABS, SUNSQR, EXP
