Create example tests

--- a/naunet/templates/cvode/CMakeLists.txt.j2
+++ b/naunet/templates/cvode/CMakeLists.txt.j2
@@ -6,11 +6,6 @@ project(NAUNET VERSION 0.1.0 LANGUAGES CUDA CXX)
 project(NAUNET VERSION 0.1.0 LANGUAGES CXX)
 {% endif %}
 
-message(STATUS "CMAKE_SYSTEM_NAME          = ${CMAKE_SYSTEM_NAME}"         )
-message(STATUS "CMAKE_CXX_COMPILER_ID      = ${CMAKE_CXX_COMPILER_ID}"     )
-message(STATUS "CMAKE_CXX_COMPILER_VERSION = ${CMAKE_CXX_COMPILER_VERSION}")
-message(STATUS "CMAKE_COMPILER_IS_GNUCXX   = ${CMAKE_COMPILER_IS_GNUCXX}"  )
-
 include(CMakePrintHelpers)
 
 set(CMAKE_CXX_STANDARD 11)
@@ -25,6 +20,11 @@ if(CMAKE_BUILD_TYPE STREQUAL Debug)
     add_definitions(-DNAUNET_DEBUG)
 endif()
 
+message(STATUS "CMAKE_SYSTEM_NAME          = ${CMAKE_SYSTEM_NAME}"         )
+message(STATUS "CMAKE_CXX_COMPILER_ID      = ${CMAKE_CXX_COMPILER_ID}"     )
+message(STATUS "CMAKE_CXX_COMPILER_VERSION = ${CMAKE_CXX_COMPILER_VERSION}")
+message(STATUS "CMAKE_COMPILER_IS_GNUCXX   = ${CMAKE_COMPILER_IS_GNUCXX}"  )
+message(STATUS "CMAKE_BUILD_TYPE           = ${CMAKE_BUILD_TYPE}"          )
 
 set(SUNDIALS_MIN_VERSION "5.6.1")
 set(SUNDIALS_DIR "" CACHE PATH "Path to SUNDIALSConfig.cmake")
@@ -40,6 +40,39 @@ find_package(SUNDIALS ${SUNDIALS_MIN_VERSION} REQUIRED CONFIG)
 #                            LOCATION INTERFACE_INCLUDE_DIRECTORIES)
 # endif()
 
+set(NVIDIA_GPU_COUNT 0)
+
+find_program(_nvidia_smi NAMES nvidia-smi)
+if (_nvidia_smi)
+    set(DETECTED_GPU_COUNT_NVIDIA_SMI 0)
+
+    # execute nvidia-smi -L to get a short list of GPUs available
+    exec_program(${_nvidia_smi} ARGS -L
+        OUTPUT_VARIABLE _nvidia_smi_out
+        RETURN_VALUE    _nvidia_smi_ret)
+
+    # process the stdout of nvidia-smi
+    if (_nvidia_smi_ret EQUAL 0)
+        # convert string with newlines to list of strings
+        string(REGEX REPLACE "\n" ";" _nvidia_smi_out "${_nvidia_smi_out}")
+        foreach(_line ${_nvidia_smi_out})
+            if (_line MATCHES "^GPU [0-9]+:")
+                math(EXPR DETECTED_GPU_COUNT_NVIDIA_SMI "${DETECTED_GPU_COUNT_NVIDIA_SMI}+1")
+                # the UUID is not very useful for the user, remove it
+                string(REGEX REPLACE " \\(UUID:.*\\)" "" _gpu_info "${_line}")
+                if (NOT _gpu_info STREQUAL "")
+                    list(APPEND DETECT_GPU_INFO "${_gpu_info}")
+                endif()
+            endif()
+        endforeach()
+    endif()
+
+    set(NVIDIA_GPU_COUNT ${DETECTED_GPU_COUNT_NVIDIA_SMI})
+endif()
+
+message(STATUS "NVIDIA_GPU_COUNT           = " ${NVIDIA_GPU_COUNT})
+
+enable_testing()
 
 add_subdirectory(src)
 add_subdirectory(test)
