--- a/naunet/templates/odeint/CMakeLists.txt.j2
+++ b/naunet/templates/odeint/CMakeLists.txt.j2
@@ -6,11 +6,6 @@ project(NAUNET VERSION 0.1.0 LANGUAGES CUDA CXX)
 project(NAUNET VERSION 0.1.0 LANGUAGES CXX)
 {% endif %}
 
-message(STATUS "CMAKE_SYSTEM_NAME          = ${CMAKE_SYSTEM_NAME}"         )
-message(STATUS "CMAKE_CXX_COMPILER_ID      = ${CMAKE_CXX_COMPILER_ID}"     )
-message(STATUS "CMAKE_CXX_COMPILER_VERSION = ${CMAKE_CXX_COMPILER_VERSION}")
-message(STATUS "CMAKE_COMPILER_IS_GNUCXX   = ${CMAKE_COMPILER_IS_GNUCXX}"  )
-
 include(CMakePrintHelpers)
 
 set(CMAKE_CXX_STANDARD 11)
@@ -38,6 +33,8 @@ find_package(Boost 1.65 REQUIRED)
 # find_package(CUDAToolkit REQUIRED)
 
 set(NVIDIA_GPU_COUNT 0)
+
+enable_testing()
 
 add_subdirectory(src)
 add_subdirectory(test)
