--- a/naunet/templates/odeint/CMakeLists.txt.j2
+++ b/naunet/templates/odeint/CMakeLists.txt.j2
@@ -28,6 +28,8 @@ message(STATUS "CMAKE_BUILD_TYPE           = ${CMAKE_BUILD_TYPE}"          )
 
 set(USE_BOOST ON)
 find_package(Boost 1.65 REQUIRED)
+message(STATUS "Boost_INCLUDE_DIRS         = ${Boost_INCLUDE_DIRS}"        )
+message(STATUS "Boost_LIBRARY_DIRS         = ${Boost_LIBRARY_DIRS}"        )
 
 # find_package(CUDA REQUIRED)
 # find_package(CUDAToolkit REQUIRED)
