--- a/naunet/templates/cvode/include/naunet_macros.h.j2
+++ b/naunet/templates/cvode/include/naunet_macros.h.j2
@@ -4,10 +4,10 @@
 #define NAUNET_SUCCESS 0
 #define NAUNET_FAIL 1
 
-{{ constants.nspec }}
-{{ constants.nreact }}
+{{ macros.nspec }}
+{{ macros.nreact }}
 {% if info.method == "sparse" or info.method == "cusparse" -%}
-{{ constants.nnz }}
+{{ macros.nnz }}
 {% endif %}
 {% if info.method == "cusparse" -%}
 #define USE_CUDA
@@ -15,7 +15,7 @@
 #define BLOCKSIZE 64
 {% endif %}
 
-{% for idx in constants.speclist -%}
+{% for idx in macros.speclist -%}
     {{ idx }}
 {% endfor -%}
 
