--- a/naunet/templates/odeint/include/naunet_macros.h.j2
+++ b/naunet/templates/odeint/include/naunet_macros.h.j2
@@ -4,10 +4,10 @@
 #define NAUNET_SUCCESS 0
 #define NAUNET_FAIL 1
 
-{{ constants.nspec }}
-{{ constants.nreact }}
+{{ macros.nspec }}
+{{ macros.nreact }}
 
-{% for idx in constants.speclist -%}
+{% for idx in macros.speclist -%}
     {{ idx }}
 {% endfor -%}
 
