A simple implement of dust

--- a/naunet/templates/odeint/include/naunet_ode.h.j2
+++ b/naunet/templates/odeint/include/naunet_ode.h.j2
@@ -3,6 +3,7 @@
 
 #include <math.h>
 #include <boost/numeric/odeint.hpp>
+#include "naunet_constants.h"
 #include "naunet_macros.h"
 #include "naunet_userdata.h"
 
