--- a/naunet/templates/odeint/include/naunet_constants.h.j2
+++ b/naunet/templates/odeint/include/naunet_constants.h.j2
@@ -2,59 +2,59 @@
 #define __NAUNET_CONSTANTS_H__
 
 {% if info.device == "gpu" %}
-__constant__ double pi         = 3.1415926;
+__constant__ double pi              = 3.1415926;
 
 // atomic mass unit (g)
-__constant__ double amu        = 1.6605402e-24;
+__constant__ double amu             = 1.6605402e-24;
 
 // mass of electron (g)
-__constant__ double me         = 9.1093897e-28;
+__constant__ double me              = 9.1093897e-28;
 
 // mass of proton (g)
-__constant__ double mp         = 1.6726231e-24;
+__constant__ double mp              = 1.6726231e-24;
 
 // mass of neutron (g)
-__constant__ double mn         = 1.6749286e-24;
+__constant__ double mn              = 1.6749286e-24;
 
 // mass of hydrogen (g)
-__constant__ double mh         = 1.6733e-24;
+__constant__ double mh              = 1.6733e-24;
 
 // electron charge (esu)
-__constant__ double echarge    = 1.6749286-10;
+__constant__ double echarge         = 1.6749286-10;
 
 // Boltzmann constant (erg/K)
-__constant__ double kerg       = 1.380658e-16;
+__constant__ double kerg            = 1.380658e-16;
 
 {% for c in variables.consts %}
-__constant__ {{ c }}
+__constant__ double {{ c }}
 {% endfor %}
 
 {% else %}
-const double pi         = 3.1415926;
+const double pi              = 3.1415926;
 
 // atomic mass unit (g)
-const double amu        = 1.6605402e-24;
+const double amu             = 1.6605402e-24;
 
 // mass of electron (g)
-const double me         = 9.1093897e-28;
+const double me              = 9.1093897e-28;
 
 // mass of proton (g)
-const double mp         = 1.6726231e-24;
+const double mp              = 1.6726231e-24;
 
 // mass of neutron (g)
-const double mn         = 1.6749286e-24;
+const double mn              = 1.6749286e-24;
 
 // mass of hydrogen (g)
-const double mh         = 1.6733e-24;
+const double mh              = 1.6733e-24;
 
 // electron charge (esu)
-const double echarge    = 1.6749286-10;
+const double echarge         = 1.6749286-10;
 
 // Boltzmann constant (erg/K)
-const double kerg       = 1.380658e-16;
+const double kerg            = 1.380658e-16;
 
 {% for c in variables.consts %}
-const {{ c }}
+const double {{ c }};
 {% endfor %}
 
 {% endif %}
