--- a/naunet/templates/odeint/include/naunet_ode.h.j2
+++ b/naunet/templates/odeint/include/naunet_ode.h.j2
@@ -5,6 +5,7 @@
 #include <boost/numeric/odeint.hpp>
 #include "naunet_constants.h"
 #include "naunet_macros.h"
+#include "naunet_physics.h"
 #include "naunet_userdata.h"
 
 using namespace std;
