--- a/naunet/templates/cvode/include/naunet_ode.h.j2
+++ b/naunet/templates/cvode/include/naunet_ode.h.j2
@@ -16,6 +16,7 @@
 #include <sundials/sundials_types.h>   // defs. of realtype, sunindextype
 #include "naunet_constants.h"
 #include "naunet_macros.h"
+#include "naunet_physics.h"
 #include "naunet_userdata.h"
 
 #define IJth(A,i,j) SM_ELEMENT_D(A,i,j)
