--- a/naunet/templates/cvode/src/CMakeLists.txt.j2
+++ b/naunet/templates/cvode/src/CMakeLists.txt.j2
@@ -22,6 +22,15 @@ add_library(naunet_ode STATIC naunet_ode.cpp)
 target_include_directories(naunet_ode PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_link_libraries(naunet_ode ${SUNDIALSLIB})
 
+{% if info.device == "gpu" -%}
+add_library(naunet_physics STATIC naunet_physics.cu)
+set_target_properties(naunet_physics PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+target_include_directories(naunet_physics PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
+{% else -%}
+add_library(naunet_physics STATIC naunet_physics.cpp)
+{% endif -%}
+target_include_directories(naunet_physics PUBLIC ${CMAKE_SOURCE_DIR}/include)
+
 add_library(naunet STATIC naunet.cpp)
 {% if info.device == "gpu" -%}
 set_target_properties(naunet PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
