--- a/naunet/templates/cvode/include/naunet_constants.h.j2
+++ b/naunet/templates/cvode/include/naunet_constants.h.j2
@@ -10,6 +10,9 @@ __constant__ double amu             = 1.6605402e-24;
 // mass of electron (g)
 __constant__ double me              = 9.1093897e-28;
 
+// mass or electron (u)
+__constant__ double meu             = 5.48579909e-4;
+
 // mass of proton (g)
 __constant__ double mp              = 1.6726231e-24;
 
@@ -20,7 +23,7 @@ __constant__ double mn              = 1.6749286e-24;
 __constant__ double mh              = 1.6733e-24;
 
 // electron charge (esu)
-__constant__ double echarge         = 1.6749286-10;
+__constant__ double echarge         = 4.80320425e-10;
 
 // Boltzmann constant (erg/K)
 __constant__ double kerg            = 1.380658e-16;
@@ -38,6 +41,9 @@ const double amu             = 1.6605402e-24;
 // mass of electron (g)
 const double me              = 9.1093897e-28;
 
+// mass or electron (u)
+const double meu             = 5.48579909e-4;
+
 // mass of proton (g)
 const double mp              = 1.6726231e-24;
 
@@ -48,7 +54,7 @@ const double mn              = 1.6749286e-24;
 const double mh              = 1.6733e-24;
 
 // electron charge (esu)
-const double echarge         = 1.6749286-10;
+const double echarge         = 4.80320425e-10;
 
 // Boltzmann constant (erg/K)
 const double kerg            = 1.380658e-16;
