Add rate modifier function

--- a/naunet/templates/cvode/src/naunet_ode.cpp.j2
+++ b/naunet/templates/cvode/src/naunet_ode.cpp.j2
@@ -50,6 +50,10 @@ int calculate_rates(realtype *k, realtype *y, UserData *u_data)
         {{ "" }}
     {% endfor %}
 
+    {% for m in ode.ratemodifier -%}
+        {{ m }};
+    {% endfor %}
+
     return NAUNET_SUCCESS;
 }
 
@@ -64,6 +68,10 @@ int fex(realtype t, N_Vector u, N_Vector u_dot, void *user_data)
         realtype {{ v }} = u_data->{{ v }};
     {% endfor %}
 
+    {% for v in variables.user_var -%}
+        {{ v }};
+    {% endfor %}
+
     realtype k[NREACTIONS] = {0.0};
     calculate_rates(k, y, u_data);
 
@@ -71,7 +79,7 @@ int fex(realtype t, N_Vector u, N_Vector u_dot, void *user_data)
         {{ eq | wordwrap(80) | replace('\n', wrap) }}
     {% endfor %}
 
-    {% for m in ode.modifier -%}
+    {% for m in ode.odemodifier -%}
         {{ m }};
     {% endfor %}
 
@@ -125,6 +133,10 @@ int jtv(N_Vector v, N_Vector Jv, realtype t, N_Vector u, N_Vector fu,
     UserData *u_data = (UserData*) user_data;
     {% for v in variables.vars -%}
         realtype {{ v }} = u_data->{{ v }};
+    {% endfor %}
+
+    {% for v in variables.user_var -%}
+        {{ v }};
     {% endfor %}
 
     realtype k[NREACTIONS] = {0.0};
